welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: illegal start of simple pattern
var:Int biscuits = 0
   ^RunFour:3: error: '=' expected but ';' found.
while (biscuits<4) {
^